--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="BOSIC" />
-    <meta name="description" content="DREIK 6  - THE BEST" />
-    <title>$DREIK- BEST RAPPER ALIVE </title>
-    <link rel="icon" type="image/gif" href="/images/main.png">
+    <meta name="description" content="$MAGAY  - MAKE AMERICA GAY AGAIN" />
+    <title>$MAGAY- MAKE AMERICA GAY AGAIN </title>
+    <link rel="icon" type="image/gif" href="/images/main.gif">
     <!--font-awesome icons link-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poetsen+One&display=swap">
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="#about">who that </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link bor" href="https://dexscreener.com/solana/2zaexgfkcp9ecubyaonu8s31vim3pccjrkjstu46s5pr"  data-target="#exampleModal">buy now</a>
+                        <a class="nav-link bor" href="https://dexscreener.com/"  data-target="#exampleModal">buy now</a>
                     </li>
                 </ul>
             </div>
@@ -82,15 +82,15 @@
 
                 <div class="col-lg-5">
                     <div class="banner-img">
-                        <img src="images/main.png" alt="banner-img" class="img-fluid">
+                        <img src="images/main.gif" alt="banner-img" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-lg-7 banner-txt">
-                    <h3> DREIK      </h3>
-                    <h1>CA : ASMD2Fx46yCQVKoYF7D8T8M56QvVKnu5szNmyZrc8iiZ </h1>
-                    <h2>$DREIK- THE BEST RAPPER ALIVE FROM THE 6 COMING TO TAKE OVER THE SOLANA SPACE FUCK TRIPPIE FUCK KENDRICK 
+                    <h3> $MAGAY      </h3>
+                    <h1>CA :  </h1>
+                    <h2>MAKE AMERICA GAY AGAIN THE ORIGINAL MOVEMENT LETS BE GAY TOGETHER AND PROUD
 </h2>
-                    <a href="https://dexscreener.com/solana/2zaexgfkcp9ecubyaonu8s31vim3pccjrkjstu46s5pr">BUY NOW</a>
+                    <a href="https://dexscreener.com/">BUY NOW</a>
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
                                 <p>2.LP TOKENS BURNT 100% BEFORE LAUNCH</p>
                                 <p>3.ZERO TAX ON TRANSACTIONS </p>
                                 <div class="over-btn">
-                                    <a href="https://t.me/DREIKonSOL">JOIN NOW</a>
+                                    <a href="https://t.me/">JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -126,10 +126,10 @@
                                 <i class="fa fa-video-camera over-i" aria-hidden="true"></i>
                                 <div class="break"></div>
                                 <h3>BIG MARKETING BUDGET</h3>
-                                <p>1.DEX ADS </p>
+                                <p>1.SOL TRENDING </p>
                                 <p>2.MOONTOK FAST TRACK & BANNER </p>
                                 <p>3.CALLERS & TWITTER RAIDS </p>                                <div class="over-btn">
-                                    <a href="https://dexscreener.com/solana/2zaexgfkcp9ecubyaonu8s31vim3pccjrkjstu46s5pr">BUY NOW</a>
+                                    <a href="https://dexscreener.com/">BUY NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                                 <p>2x EXPERIENCED DEVS </p>
                                 <p>3X GRAPHIC DESIGNERS</p>
                                 <p>1X SECRET PARTNERSHIP</p>                                <div class="over-btn">
-                                    <a href="https://dexscreener.com/solana/2zaexgfkcp9ecubyaonu8s31vim3pccjrkjstu46s5pr">BUY NOW</a>
+                                    <a href="https://dexscreener.com/">BUY NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                                 <p>1.SPECIAL PARTNERSHIPS... </p>
                                 <p>2.MASSIVE GIVE AWAY ...</p>
                                 <p>3.SECRET LOCATION EVENT... </p>                                  <div class="over-btn">
-                                    <a href="https://t.me/DREIKonSOL"> JOIN NOW</a>
+                                    <a href="https://t.me/"> JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -177,19 +177,19 @@
                     <div class="row">
                         <div class="col-lg-4 col-sm-8 m-sm-auto col-md-5 text-center">
                             <div class="about-img ai-one">
-                                <img src="images/about1.png" alt="about-img" class="img-fluid">
+                                <img src="images/about1.jpg" alt="about-img" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-lg-1 col-md-1"></div>
                         <div class="col-lg-7 col-md-6">
                             <div class="about-txt">
                                 <span class="separet-span"> </span>
-                                <h3>$DREIK</h3>
-                                <p> NEW ALBUM SOON  - EXCLUSIVE ACCESS TO $DREIK HOLDERS TO THE NEW ALBUM DROPPING SOON 
+                                <h3>$MAGAY</h3>
+                                <p> LETS BE REAL MAGAY IS GOING TO 1B AND NO ONE IS GONNA STOP IT
 
                                     </p>
-                                <p class="separate-p tab-hider">JOIN THE COMMUNITY OR YOU DESERVE 10 YEARS OF CONSECUTIVE RUGS</p>
-                                <a href="https://t.me/DREIKonSOL">JOIN TELEGRAM NOW</a>
+                                <p class="separate-p tab-hider">JOIN THE COMMUNITY OR YOU DESERVE 10 YEARS OF ANAL SEX WITH MANDINGO</p>
+                                <a href="https://t.me/">JOIN TELEGRAM NOW</a>
                             </div>
                         </div>
                     </div>
@@ -208,10 +208,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-sm-11">
                     <div class="footer-logo text-center">
-                        <a class="f-logo" href="#banner"><b>$DREIK </b></a>
-                        <p>DREIK IS THE DEGEN VERSION OF DRAKE  </p>
+                        <a class="f-logo" href="#banner"><b>$MAGAY </b></a>
+                        <p>MAKE AMERIGA GAY AGAIN </p>
                         <div class="footer-social">
-                            <a href="https://x.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://x.com/MAGAYsolana"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                         </div>
                     </div>
@@ -226,7 +226,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="fop-btm text-center">
-                        <h2>Copyright &copy; 2024. All rights reserved by <a href="#">$DREIK</a></h2>
+                        <h2>Copyright &copy; 2024. All rights reserved by <a href="#">$MAGAY</a></h2>
                     </div>
                 </div>
             </div>
