--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-lg-7 banner-txt">
                     <h3> $MAGAY      </h3>
-                    <h1>CA :  </h1>
+                    <h1>CA : AgT9otoxrHzgYtKDcmgDoLh1e2oD4twFp7cfSuLHgNwj </h1>
                     <h2>MAKE AMERICA GAY AGAIN THE ORIGINAL MOVEMENT LETS BE GAY TOGETHER AND PROUD
 </h2>
                     <a href="https://dexscreener.com/">BUY NOW</a>
